Header and Footer Completion

--- a/src/app/core/header/header/header.component.html
+++ b/src/app/core/header/header/header.component.html
@@ -1,1 +1,17 @@
-<p>header works!</p>
+<nav class="navbar">
+    <div class="nav-center">
+        <ul>
+            <li>Home</li>
+            <li>Catalog</li>
+            <li>Create Recipe</li>
+            <li>My Recipes</li>
+        </ul>
+    </div>
+    <div class="nav-right">
+        <ul>
+            <li>Log in</li>
+            <li>Register</li>
+            <li>Logout</li>
+        </ul>
+    </div>
+</nav>
