--- a/src/app/core/footer/footer/footer.component.html
+++ b/src/app/core/footer/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<footer class="footer">
+    <div class="footer-content">
+        <p>&copy; 2024 Nikolay Kastsanev's Recipe App. All Rights Reserved.</p>
+        </div>
+</footer>
