--- a/src/app/core/footer/footer.component.css
+++ b/src/app/core/footer/footer.component.css
@@ -1,18 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
 
-footer { 
-    display: block;
-    position: absolute;
-    right: 0;
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: sticky;
     bottom: 0;
-    left: 0;
-    text-align:center;
+    text-align: center;
     font-family: 'Poppins', sans-serif;
     background-color: #935936;
     border: 1px solid black;
     height: 60px;
-}
+    box-sizing: border-box;
+  }
+  
+  
 
 .footer-content {
     display: flex;
