--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -1,17 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
 .navbar {
-    position: relative; 
+    position: relative;
     display: flex;
     align-items: center;
     background-color: #935936;
     padding: 10px 20px;
     color: #fff;
     font-family: 'Poppins', sans-serif;
-    margin: -8px -8px 0px -8px; 
-    height: 40px;
+    height: 60px;
     border: 1px solid black;
-}
+    box-sizing: border-box;
+  }
+  
 
 .nav-center {
     position: absolute; 
