Home Page is ready!

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,8 @@
-<div class="home-container">
-    <div class="image-container">
-        <img src="main-photo.jpg" alt="Main Image" class="styled-image" />
-      </div>
+<div class="image-container">
+    <img src="main-photo.jpg" alt="Main Image" class="styled-image" />
+    <div class="image-overlay">
+      <h2>Discover delicious recipes</h2>
+      <p>Find your favorite dishes and explore new tastes!</p>
+      <a href="/recipes" class="cta-btn"><span>Browse the catalog</span></a>
+    </div>
   </div>
-  
