--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,24 +1,50 @@
-.home-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  flex: 1;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
 .image-container {
-  position: relative;
-  width: 100%;
-  height: calc(100vh - 120px);
-  background-color: rgb(56, 56, 56);
-}
-
-.styled-image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  opacity: 0.7;
-}
+    position: relative;
+    width: 100%;
+    height: calc(100vh - 120px);
+    background-color: rgb(30, 30, 30);
+    font-family: 'Poppins', sans-serif;
+    
+  }
+  
+  .styled-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.4;
+  }
+  
+  .image-overlay {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: white;
+    z-index: 2;
+    padding: 20px;
+    border-radius: 10px;
+  }
+  
+  .image-overlay h2 {
+    font-size: 45px;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  
+  .image-overlay p {
+    font-size: 18px;
+    color: white;
+    margin-bottom: 20px;
+    margin-top: 0;
+  }
+  
+  .cta-btn {
+    background-color: #935936;
+    color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    border: 1px solid black;
+    font-size: 18px;
+  }
