Basic Login Page and Background Image for every window

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -3,6 +3,7 @@
         <ul>
             <li>Home</li>
             <li>Catalog</li>
+            <li>Search</li>
             <li>Create Recipe</li>
             <li>My Recipes</li>
         </ul>
