--- a/src/styles.css
+++ b/src/styles.css
@@ -4,10 +4,32 @@ body, html {
   margin: 0;
   padding: 0;
   height: 100%;
+  font-family: 'Poppins', sans-serif;
 }
 
 app-root {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+}
+
+.image-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0; 
+}
+
+.styled-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.4;
+}
+
+router-outlet {
+  position: relative;
+  z-index: 1;
 }
