--- a/src/app/user/login/login.component.css
+++ b/src/app/user/login/login.component.css
@@ -1,35 +1,68 @@
 .login-container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 20px;
-    border-radius: 10px;
-    text-align: center;
-    width: 300px;
-  }
-  
-  form {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-  
-  input {
-    padding: 8px;
-    margin: 5px 0;
-  }
-  
-  button {
-    padding: 10px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #45a049;
-  }
-  
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 16px;
+  border-radius: 15px;
+  text-align: center;
+  width: 300px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+label {
+  text-align: left;
+  font-size: 16px;
+}
+
+input {
+  padding: 12px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  margin-top: -5px;
+}
+
+input::placeholder {
+  font-size: 14px;
+  color: #888;
+  font-family: 'Poppins', sans-serif;
+}
+
+
+button {
+  padding: 8px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  width: 90px;
+  margin: 0 auto;
+}
+
+
+button:hover {
+  background-color: #45a049;
+}
+
+.signup-text {
+  margin-top: 10px;
+  margin-bottom: 0px;
+  font-size: 15px;
+}
+
+.signup-text a {
+  color: #4CAF50;
+  text-decoration: none;
+}
+
+.signup-text a:hover {
+  text-decoration: underline;
+}
