--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,13 +1,13 @@
 <div class="login-container">
-    <h2>Login</h2>
-    <form>
+  <h2>Login</h2>
+  <form>
       <label for="username">Username:</label>
-      <input type="text" id="username" name="username" required>
-  
+      <input type="text" id="username" name="username" placeholder="Enter your username" required>
+
       <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required>
-  
+      <input type="password" id="password" name="password" placeholder="Enter your password" required>
+
       <button type="submit">Login</button>
-    </form>
-  </div>
-  
+  </form>
+  <p class="signup-text">Don't have an account yet? <a href="/register">Sign up</a></p>
+</div>
