Catalog Page with hardcoded data, new Profile Button, new mini icon (favicon) and implemented "routerLink"

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar">
     <div class="nav-center">
         <ul>
-            <li>Home</li>
-            <li>Catalog</li>
+            <li routerLink="/">Home</li>
+            <li routerLink="/recipes">Catalog</li>
             <li>Search</li>
             <li>Create Recipe</li>
             <li>My Recipes</li>
@@ -10,8 +10,9 @@
     </div>
     <div class="nav-right">
         <ul>
-            <li>Log in</li>
-            <li>Register</li>
+            <li routerLink="/login">Log in</li>
+            <li routerLink="/register">Register</li>
+            <li>Niki's Profile</li>
             <li>Logout</li>
         </ul>
     </div>
