--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -9,5 +9,5 @@
 
       <button type="submit">Login</button>
   </form>
-  <p class="signup-text">Don't have an account yet? <a href="/register">Sign up</a></p>
+  <p class="signup-text">Don't have an account yet? <a routerLink="/register">Sign up</a></p>
 </div>
