--- a/src/app/core/background/background.component.css
+++ b/src/app/core/background/background.component.css
@@ -1,9 +1,11 @@
-.image-container {
-    position: relative;
+  .image-container {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: calc(100vh - 120px);
+    height: 100%;
     background-color: rgb(30, 30, 30);
-    font-family: 'Poppins', sans-serif;
+    z-index: -1;
   }
   
   .styled-image {
@@ -12,4 +14,5 @@
     object-fit: cover;
     opacity: 0.4;
   }
+  
   
