--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
     <div class="image-overlay">
       <h2>Discover delicious recipes</h2>
       <p>Find your favorite dishes and explore new tastes!</p>
-      <a href="/recipes" class="cta-btn"><span>Browse the catalog</span></a>
+      <a routerLink="/recipes" class="cta-btn"><span>Browse the catalog</span></a>
     </div>
