--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -15,6 +15,6 @@
   
         <button type="submit">Sign Up</button>
     </form>
-    <p class="signup-text">Already have an account? <a href="/login">Log in</a></p>
+    <p class="signup-text">Already have an account? <a routerLink="/login">Log in</a></p>
   </div>
   
