--- a/src/styles.css
+++ b/src/styles.css
@@ -5,21 +5,23 @@ body, html {
   padding: 0;
   height: 100%;
   font-family: 'Poppins', sans-serif;
+  overflow-x: hidden;
 }
 
 app-root {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  position: relative;
 }
 
 .image-container {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 0; 
+  z-index: -1;
 }
 
 .styled-image {
@@ -30,6 +32,6 @@ app-root {
 }
 
 router-outlet {
-  position: relative;
+  flex: 1;
   z-index: 1;
 }
