--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -4,7 +4,7 @@
             <li routerLink="/">Home</li>
             <li routerLink="/recipes">Catalog</li>
             <li>Search</li>
-            <li>Create Recipe</li>
+            <li routerLink="/create-recipe">Create Recipe</li>
             <li>My Recipes</li>
         </ul>
     </div>
@@ -12,7 +12,7 @@
         <ul>
             <li routerLink="/login">Log in</li>
             <li routerLink="/register">Register</li>
-            <li>Niki's Profile</li>
+            <li routerLink="/profile">Niki's Profile</li>
             <li>Logout</li>
         </ul>
     </div>
