--- a/src/app/user/login/login.component.css
+++ b/src/app/user/login/login.component.css
@@ -66,3 +66,22 @@ button:hover {
 .signup-text a:hover {
   text-decoration: underline;
 }
+
+.error-border {
+  border-left: 6px solid red;
+}
+
+.error-border {
+  border-left: 4px solid red;
+}
+
+.error-text {
+  color: red;
+  font-size: 16px;
+  margin-top: 4px;
+}
+
+button:disabled {
+  background-color: gray;
+  cursor: not-allowed;
+}
