--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,13 +1,56 @@
 <div class="login-container">
   <h2>Login</h2>
-  <form>
-      <label for="username">Username:</label>
-      <input type="text" id="username" name="username" placeholder="Enter your username" required>
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <label for="username">Username:</label>
+    <input
+      type="text"
+      id="username"
+      formControlName="username"
+      placeholder="Enter your username"
+      [ngClass]="{
+        'error-border': loginForm.get('username')?.invalid && loginForm.get('username')?.touched
+      }"
+    />
+    
+    <div
+      class="error-text"
+      *ngIf="loginForm.get('username')?.hasError('required') && loginForm.get('username')?.touched"
+    >
+      Username is required.
+    </div>
+    <div
+      class="error-text"
+      *ngIf="loginForm.get('username')?.hasError('minlength') && loginForm.get('username')?.touched"
+    >
+      Username must be at least 6 characters.
+    </div>
 
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password" placeholder="Enter your password" required>
+    <label for="password">Password:</label>
+    <input
+      type="password"
+      id="password"
+      formControlName="password"
+      placeholder="Enter your password"
+      [ngClass]="{
+        'error-border': loginForm.get('password')?.invalid && loginForm.get('password')?.touched
+      }"
+    />
+    <div
+      class="error-text"
+      *ngIf="loginForm.get('password')?.hasError('required') && loginForm.get('password')?.touched"
+    >
+      Password is required.
+    </div>
+    <div
+      class="error-text"
+      *ngIf="loginForm.get('password')?.hasError('minlength') && loginForm.get('password')?.touched"
+    >
+      Password must be at least 6 characters.
+    </div>
 
-      <button type="submit">Login</button>
+    <button type="submit" [disabled]="loginForm.invalid">Login</button>
   </form>
-  <p class="signup-text">Don't have an account yet? <a routerLink="/register">Sign up</a></p>
+  <p class="signup-text">
+    Don't have an account yet? <a routerLink="/register">Sign up</a>
+  </p>
 </div>
