--- a/src/app/user/profile/profile.component.css
+++ b/src/app/user/profile/profile.component.css
@@ -63,7 +63,6 @@ button#save:hover {
   margin: 20px;
 }
 
-/* За формата, подреждаме input елементите вертикално */
 form {
   display: flex;
   flex-direction: column;
@@ -99,4 +98,23 @@ input::placeholder {
 
 .buttons button {
   width: 48%;
+}
+
+.error-border {
+  border-left: 6px solid red;
+}
+
+.error-border {
+  border-left: 4px solid red;
+}
+
+.error-text {
+  color: red;
+  font-size: 16px;
+  margin-top: 4px;
+}
+
+button:disabled {
+  background-color: gray;
+  cursor: not-allowed;
 }
