--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -1,19 +1,102 @@
 <div class="register-container">
     <h2>Register</h2>
-    <form>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" placeholder="Enter your email" required>
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+      <label for="email">Email:</label>
+      <input
+        type="email"
+        id="email"
+        formControlName="email"
+        placeholder="Enter your email"
+        [ngClass]="{
+          'error-border': registerForm.get('email')?.invalid && registerForm.get('email')?.touched
+        }"
+      />
+      <div
+        class="error-text"
+        *ngIf="registerForm.get('email')?.hasError('required') && registerForm.get('email')?.touched"
+      >
+        Email is required.
+      </div>
+      <div
+        class="error-text"
+        *ngIf="registerForm.get('email')?.hasError('emailValidator') && registerForm.get('email')?.touched"
+      >
+        Invalid email address.
+      </div>
   
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" placeholder="Enter your username" required>
+      <label for="username">Username:</label>
+      <input
+        type="text"
+        id="username"
+        formControlName="username"
+        placeholder="Enter your username"
+        [ngClass]="{
+          'error-border': registerForm.get('username')?.invalid && registerForm.get('username')?.touched
+        }"
+      />
+      <div
+        class="error-text"
+        *ngIf="registerForm.get('username')?.hasError('required') && registerForm.get('username')?.touched"
+      >
+        Username is required.
+      </div>
+      <div
+        class="error-text"
+        *ngIf="registerForm.get('username')?.hasError('minlength') && registerForm.get('username')?.touched"
+      >
+        Username must be at least 6 characters.
+      </div>
   
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" placeholder="Enter your password" required>
+      <div formGroupName="passGroup">
+        <label for="password" id="password-label">Password:</label>
+        <input
+          type="password"
+          id="password"
+          formControlName="password"
+          placeholder="Enter your password"
+          [ngClass]="{
+            'error-border': registerForm.get('passGroup.password')?.invalid && registerForm.get('passGroup.password')?.touched
+          }"
+        />
+        <div
+          class="error-text"
+          *ngIf="registerForm.get('passGroup.password')?.hasError('required') && registerForm.get('passGroup.password')?.touched"
+        >
+          Password is required.
+        </div>
+        <div
+          class="error-text"
+          *ngIf="registerForm.get('passGroup.password')?.hasError('minlength') && registerForm.get('passGroup.password')?.touched"
+        >
+          Password must be at least 6 characters.
+        </div>
+      
+        <label for="rePassword" id="rePassword-label">Confirm Password:</label>
+        <input
+          type="password"
+          id="rePassword"
+          formControlName="rePassword"
+          placeholder="Confirm your password"
+          [ngClass]="{
+            'error-border': registerForm.get('passGroup.rePassword')?.invalid && registerForm.get('passGroup.rePassword')?.touched || (registerForm.get('passGroup')?.hasError('matchPasswordsValidator') && registerForm.get('passGroup.rePassword')?.touched)
+          }"
+        />
+        <div
+          class="error-text"
+          *ngIf="registerForm.get('passGroup.rePassword')?.hasError('required') && registerForm.get('passGroup.rePassword')?.touched"
+        >
+          Confirm Password is required.
+        </div>
+        <div
+          class="error-text"
+          *ngIf="registerForm.get('passGroup')?.hasError('matchPasswordsValidator') && registerForm.get('passGroup.rePassword')?.touched"
+        >
+          Passwords do not match.
+        </div>
+      </div>
+      
   
-        <label for="confirm-password">Confirm Password:</label>
-        <input type="password" id="confirm-password" name="confirm-password" placeholder="Confirm your password" required>
-  
-        <button type="submit">Sign Up</button>
+      <button type="submit" [disabled]="registerForm.invalid">Sign Up</button>
     </form>
     <p class="signup-text">Already have an account? <a routerLink="/login">Log in</a></p>
   </div>
