--- a/src/app/recipe/recipe-list/recipe-list.component.css
+++ b/src/app/recipe/recipe-list/recipe-list.component.css
@@ -1,46 +1,84 @@
 .recipe-list {
-    position: relative;
-    margin: 70px auto;
-    width: 90%;
-    max-width: 1200px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 25px;
-    z-index: 1;
-    padding: 10px;
-  }
-  
-  .recipe-card {
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    background: #fff;
-    text-align: center;
-    padding: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  }
-  
-  .recipe-card img {
-    width: 100%;
-    height: 150px;
-    object-fit: cover;
-    border-radius: 8px;
-  }
-  
-  .recipe-card h3 {
-    font-size: 18px;
-    margin: 10px 0;
-  }
-  
-  .recipe-card button {
-    background-color: #a0522d;
-    color: #fff;
-    border: none;
-    padding: 8px 12px;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .recipe-card button:hover {
-    background-color: #8b4513;
-  }
-  
+  position: relative;
+  margin: 70px auto;
+  width: 90%;
+  max-width: 1200px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 25px;
+  z-index: 1;
+  padding: 10px;
+}
+
+.recipe-card {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
+  padding: 15px;
+  text-align: center;
+}
+
+.recipe-card img {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 15px;
+}
+
+.recipe-card h3 {
+  font-size: 20px;
+  font-weight: bold;
+  color: #333;
+}
+
+.recipe-card p {
+  font-size: 14px;
+  color: #777;
+}
+
+.recipe-card button {
+  background-color: #a0522d;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  font-size: 16px;
+  margin-right: 10px;
+}
+
+.recipe-card button:hover {
+  background-color: #8b4513;
+}
+
+.buttons {
+  margin: 20px;
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+}
+
+.like-button {
+  background-color: #28a745 !important;
+  color: #ffffff !important;
+}
+
+.like-button:hover {
+  background-color: #119b1c !important;
+}
+
+.dislike-button {
+  background-color: #d30b0b !important;
+  color: #ffffff !important;
+}
+
+.dislike-button:hover {
+  background-color: #b40315 !important;
+}
+
+.recipe-card .author {
+  font-size: 12px;
+  color: #555;
+}
