--- a/src/app/recipe/recipe-list/recipe-list.component.html
+++ b/src/app/recipe/recipe-list/recipe-list.component.html
@@ -1,11 +1,31 @@
 <div class="recipe-list">
-    @for (recipe of recipes; track $index) {
-      <div class="recipe-card">
-        <img [src]="recipe.image" alt="Choco" />
-        <h3>Chocolate Pudding</h3>
-        <p>Category: Dessert</p>
-        <button>Details</button>
+  <div class="recipe-card" *ngFor="let recipe of recipes; let i = index">
+    <img [src]="recipe.image" alt="{{ recipe.title }}" />
+    <h3>{{ recipe.title }}</h3>
+    <p>Category: {{ recipe.category }}</p>
+    <div class="buttons">
+      <button [routerLink]="['/recipes', recipe._id]">Details</button>
+      
+      <div class="like-dislike" *ngIf="userId && userId !== recipe.authorId.username">
+      <!-- Like button -->
+      <button
+        *ngIf="!isLiked(recipe)"
+        class="like-button"
+        (click)="toggleLike(recipe)"
+      >
+        Like
+      </button>
+
+      <!-- Dislike button -->
+      <button
+        *ngIf="isLiked(recipe)"
+        class="dislike-button"
+        (click)="toggleLike(recipe)"
+      >
+        Dislike
+      </button>
       </div>
-    }
+    </div>
+    <div class="author">Author: {{ recipe.authorId.username }}</div>
   </div>
-  
+</div>
