--- a/src/styles.css
+++ b/src/styles.css
@@ -35,3 +35,11 @@ router-outlet {
   flex: 1;
   z-index: 1;
 }
+
+app-recipe-list {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  z-index: 1;
+  overflow-y: auto;
+}
