Login, Register, Profile Change Details, Logout are working, and implemented Search Page

--- a/src/app/recipe/current-recipe/current-recipe.component.html
+++ b/src/app/recipe/current-recipe/current-recipe.component.html
@@ -3,7 +3,7 @@
 
     <p class="author">Author: {{ recipe.authorId.username }}</p>
 
-    <img [src]="recipe.image" alt="{{ recipe.title }}" class="recipe-image" />
+    <img [src]="recipe.image" class="recipe-image" />
 
     <h3>Category:</h3>
     <p class="category">{{ recipe.category }}</p>
