--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<app-authenticate>
+</app-authenticate>
 <app-header></app-header>
 <app-background></app-background>
 <router-outlet></router-outlet>
