--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,19 +1,21 @@
 <nav class="navbar">
-    <div class="nav-center">
-        <ul>
-            <li routerLink="/">Home</li>
-            <li routerLink="/recipes">Catalog</li>
-            <li>Search</li>
-            <li routerLink="/create-recipe">Create Recipe</li>
-            <li>My Recipes</li>
-        </ul>
-    </div>
-    <div class="nav-right">
-        <ul>
-            <li routerLink="/login">Log in</li>
-            <li routerLink="/register">Register</li>
-            <li routerLink="/profile">Niki's Profile</li>
-            <li>Logout</li>
-        </ul>
-    </div>
+  <div class="nav-center">
+    <ul>
+      <li routerLink="/">Home</li>
+      <li routerLink="/recipes">Catalog</li>
+      <li routerLink="/search">Search</li>
+      <li *ngIf="isLoggedIn" routerLink="/create-recipe">Create Recipe</li>
+      <li *ngIf="isLoggedIn" routerLink="/my-recipes">My Recipes</li>
+    </ul>
+  </div>
+
+  <div class="nav-right">
+    <ul>
+      <li *ngIf="!isLoggedIn" routerLink="/login">Log in</li>
+      <li *ngIf="!isLoggedIn" routerLink="/register">Register</li>
+
+      <li *ngIf="isLoggedIn" routerLink="/profile">{{ username }}'s Profile</li>
+      <li *ngIf="isLoggedIn" (click)="logout()">Logout</li>
+    </ul>
+  </div>
 </nav>
