--- a/src/app/recipe/create-recipe/create-recipe.component.html
+++ b/src/app/recipe/create-recipe/create-recipe.component.html
@@ -26,16 +26,15 @@
       <select id="category" formControlName="category"
         [ngClass]="{'error-border': recipeForm.get('category')?.invalid && recipeForm.get('category')?.touched}">
         <option value="" disabled selected>Select a category</option>
-        <option value="appetizer">Appetizer</option>
-        <option value="dessert">Dessert</option>
-        <option value="main-course">Main Course</option>
-        <option value="snacks">Snacks</option>
+        <option *ngFor="let category of categories" [value]="category.value">
+          {{ category.label }}
+        </option>
       </select>
       <div class="error-text" *ngIf="recipeForm.get('category')?.touched">
         <span *ngIf="recipeForm.get('category')?.errors?.['required']">Category is required.</span>
       </div>
     </div>
-
+    
     <div class="form-group">
       <label for="description">Description</label>
       <input id="description" type="text" formControlName="description" placeholder="Enter description"
@@ -57,12 +56,12 @@
         </div>
         <div class="error-text" *ngIf="ingredient.get('name')?.touched">
           <span *ngIf="ingredient.get('name')?.errors?.['required']">Ingredient is required.</span>
-          <span *ngIf="ingredient.get('name')?.errors?.['minlength']">Ingredient must be at least 5 characters
-            long.</span>
+          <span *ngIf="ingredient.get('name')?.errors?.['minlength']">Ingredient must be at least 5 characters long.</span>
         </div>
       </div>
       <button type="button" id="add-ingredient" (click)="addIngredient()">Add Ingredient</button>
     </div>
+    
 
 
     <div class="form-group">
