--- a/src/app/recipe/search/search.component.css
+++ b/src/app/recipe/search/search.component.css
@@ -1,3 +1,55 @@
+.search-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 20px;
+  width: 100%;
+  height: 100%;
+  margin-top: 0;
+  box-sizing: border-box;
+}
+
+.search-bar {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 30px;
+  width: 100%;
+  max-width: 800px;
+  padding: 10px;
+  background: rgba(255, 255, 255, 0.8);
+  border-radius: 12px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.search-bar input, .search-bar select {
+  padding: 12px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  outline: none;
+  flex: 1;
+  min-width: 180px;
+}
+
+.search-bar button {
+  background-color: #a0522d;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.search-bar button:hover {
+  background-color: #8b4513;
+}
+
 .recipe-list {
   position: relative;
   margin: 70px auto;
@@ -8,6 +60,8 @@
   gap: 65px;
   z-index: 1;
   padding: 10px;
+  margin-top: 5px;
+  margin-bottom: 10px;
 }
 
 .recipe-card {
@@ -42,7 +96,7 @@
 
 .recipe-card button {
   background-color: #a0522d;
-  color: #fff;
+  color: white;
   border: none;
   padding: 10px 20px;
   border-radius: 5px;
