--- a/src/app/recipe/search/search.component.html
+++ b/src/app/recipe/search/search.component.html
@@ -22,7 +22,7 @@
       <div class="buttons">
         <button [routerLink]="['/recipes', recipe._id]">Details</button>
 
-        <div class="like-dislike" *ngIf="userId && userId !== recipe.authorId.username">
+        <div class="like-dislike" *ngIf="userId && userId !== recipe.authorId._id">
           <button
             *ngIf="!isLiked(recipe)"
             class="like-button"
