--- a/src/app/recipe/create-recipe/create-recipe.component.html
+++ b/src/app/recipe/create-recipe/create-recipe.component.html
@@ -1,4 +1,8 @@
-<div class="create-recipe-container" [formGroup]="recipeForm">
+<div *ngIf="isLoading" class="loader">
+  <app-loader></app-loader> 
+</div>
+
+<div class="create-recipe-container" *ngIf="!isLoading" [formGroup]="recipeForm">
   <h2>Create a New Recipe</h2>
   <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
@@ -41,8 +45,7 @@
         [ngClass]="{'error-border': recipeForm.get('description')?.invalid && recipeForm.get('description')?.touched}" />
       <div class="error-text" *ngIf="recipeForm.get('description')?.touched">
         <span *ngIf="recipeForm.get('description')?.errors?.['required']">Description is required.</span>
-        <span *ngIf="recipeForm.get('description')?.errors?.['minlength']">Description must be at least 10 characters
-          long.</span>
+        <span *ngIf="recipeForm.get('description')?.errors?.['minlength']">Description must be at least 10 characters long.</span>
       </div>
     </div>
 
@@ -61,8 +64,6 @@
       </div>
       <button type="button" id="add-ingredient" (click)="addIngredient()">Add Ingredient</button>
     </div>
-    
-
 
     <div class="form-group">
       <label for="preparation">Preparation</label>
@@ -70,12 +71,10 @@
         [ngClass]="{'error-border': recipeForm.get('preparation')?.invalid && recipeForm.get('preparation')?.touched}" />
       <div class="error-text" *ngIf="recipeForm.get('preparation')?.touched">
         <span *ngIf="recipeForm.get('preparation')?.errors?.['required']">Preparation is required.</span>
-        <span *ngIf="recipeForm.get('preparation')?.errors?.['minlength']">Preparation must be at least 10 characters
-          long.</span>
+        <span *ngIf="recipeForm.get('preparation')?.errors?.['minlength']">Preparation must be at least 10 characters long.</span>
       </div>
     </div>
 
     <button type="submit" [disabled]="recipeForm.invalid">Create Recipe</button>
-
   </form>
 </div>
