--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,4 +1,8 @@
-<div class="login-container">
+<div *ngIf="isLoading" class="loader">
+  <app-loader></app-loader> 
+</div>
+
+<div class="login-container" *ngIf="!isLoading">
   <h2>Login</h2>
   <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <label for="username">Username:</label>
