--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -9,54 +9,116 @@
     height: 60px;
     border: 1px solid black;
     box-sizing: border-box;
+    z-index: 10;
   }
   
-
-.nav-center {
-    position: absolute; 
-    left: 50%; 
-    transform: translateX(-50%); 
-}
-
-.nav-right {
-    margin-left: auto; 
+  .nav-center {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  
+  .nav-right {
+    margin-left: auto;
     display: flex;
-    gap: 20px; 
-}
-
-.nav-center ul,
-.nav-right ul {
+    gap: 20px;
+  }
+  
+  .nav-center ul,
+  .nav-right ul {
     display: flex;
-    gap: 20px; 
-    list-style: none; 
+    gap: 20px;
+    list-style: none;
     padding: 0;
     margin: 0;
-}
-
-.nav-center li, .nav-right li {
-    cursor: pointer; 
-    font-size: 18px; 
+  }
+  
+  .nav-center li, .nav-right li {
+    cursor: pointer;
+    font-size: 18px;
     position: relative;
     transition: color 0.3s ease, transform 0.3s ease;
-}
-
-
-.nav-center li:hover, .nav-right li:hover {
+  }
+  
+  .nav-center li:hover, .nav-right li:hover {
     transform: scale(1.1);
-}
-
-
-.nav-center li::after, .nav-right li::after {
-    content: '';
+  }
+  
+  .hamburger {
+    display: none;
+    cursor: pointer;
+    flex-direction: column;
+    gap: 5px;
+    z-index: 20;
+  }
+  
+  .hamburger div {
+    width: 25px;
+    height: 3px;
+    background-color: white;
+  }
+  
+  .menu {
+    display: none;
+    flex-direction: column;
+    align-items: flex-start;
+    background-color: #935936;
     position: absolute;
+    top: 59px;
     left: 0;
-    bottom: -5px;
-    width: 0;
-    height: 2px;
-    transition: width 0.3s ease;
-}
+    width: 100%;
+    padding: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+    z-index: 100;
+  }
+  
+  .menu.open {
+    display: flex; /* Показва менюто, когато е активно */
+  }
+  
+  .menu ul {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .menu li {
+    font-size: 16px;
+    padding: 5px 0;
+    cursor: pointer;
+  }
 
 
-.nav-center li:hover, .nav-right li:hover {
-    text-shadow: 0px 4px 10px rgba(0, 0, 0, 0.75);
+@media (max-width: 1078px) {
+    .nav-center {
+      position: relative;
+      left: 0; /* Премахваме фиксираната позиция */
+      margin-left: 0; /* Подравняваме елементите надясно */
+      transform: none; /* Премахваме трансформацията */
+    }
+  }
+
+
+
+  @media (max-width: 780px) {
+    .hamburger {
+      display: flex;
+    }
+  
+    .nav-center {
+      display: none; /* Скриваме стандартната навигация */
+    }
+
+    .nav-right {
+      display: none; /* Скриваме правата част от менюто */
+    }
+  
+    .menu {
+      display: none; /* Хамбургер менюто по подразбиране е скрито */
+
+    }
 }
