--- a/src/app/recipe/my-recipes/my-recipes.component.html
+++ b/src/app/recipe/my-recipes/my-recipes.component.html
@@ -1,12 +1,25 @@
-<div class="recipe-list">
-    <div class="recipe-card" *ngFor="let recipe of filteredRecipes; let i = index">
-      <img [src]="recipe.image" alt="{{ recipe.title }}" />
-      <h3>{{ recipe.title }}</h3>
-      <p>Category: {{ recipe.category }}</p>
-      <div class="buttons">
-        <button [routerLink]="['/recipes', recipe._id]">Details</button>
-      </div>
-      <div class="author">Author: {{ recipe.authorId.username }}</div>
-    </div>
+<div class="recipe-list-container">
+  <div *ngIf="isLoading" class="loading-wrapper">
+    <app-loader></app-loader>
   </div>
-  
+
+  <ng-container *ngIf="!isLoading">
+    <div *ngIf="filteredRecipes.length > 0; else noRecipes" class="recipe-list">
+      <div class="recipe-card" *ngFor="let recipe of filteredRecipes; let i = index">
+        <img [src]="recipe.image" alt="{{ recipe.title }}" />
+        <h3>{{ recipe.title }}</h3>
+        <p>Category: {{ recipe.category }}</p>
+        <div class="buttons">
+          <button [routerLink]="['/recipes', recipe._id]">Details</button>
+        </div>
+        <div class="author">Author: {{ recipe.authorId.username }}</div>
+      </div>
+    </div>
+  </ng-container>
+
+  <ng-template #noRecipes>
+    <div class="no-recipes-wrapper">
+      <p class="no-recipes-message">You don't have any recipes yet. Start adding your favorites!</p>
+    </div>
+  </ng-template>
+</div>
