--- a/src/app/recipe/search/search.component.css
+++ b/src/app/recipe/search/search.component.css
@@ -70,7 +70,7 @@
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
   padding: 15px;
   text-align: center;
-  width: 250px;
+  width: 265px;
   height: 350px;
   margin: 0 auto;
 }
@@ -138,4 +138,16 @@
 .recipe-card .author {
   font-size: 12px;
   color: #555;
+}
+
+.no-recipes-message {
+  font-size: 55px;
+  color: black;
+  background-color: white;
+  opacity: 0.7;
+  text-align: center;
+  margin-top: 250px;
+  font-style: italic;
+  border-radius: 15px;
+  margin: 13%;
 }
